pkg/controller/appdefinition/testdata/service/alias/expected.yaml.d/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: con1
  namespace: app-created-namespace
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/container-name": "con1"
    "acorn.io/managed": "true"
    "con1key": "value"
    "both": "con1val"
  annotations:
    "con1": "value"
    "both": "con1val"
spec:
  selector:
    matchLabels:
      "acorn.io/app-namespace": "app-namespace"
      "acorn.io/app-name": "app-name"
      "acorn.io/container-name": "con1"
      "acorn.io/managed": "true"
  template:
    metadata:
      labels:
        "acorn.io/app-namespace": "app-namespace"
        "acorn.io/app-name": "app-name"
        "acorn.io/container-name": "con1"
        "acorn.io/managed": "true"
        "con1key": "value"
        "both": "con1val"
      annotations:
        acorn.io/container-spec: '{"annotations":{"both":"con1val","con1":"value"},"image":"foo","ports":[{"port":80,"protocol":"http","publish":true,"targetPort":81},{"port":80,"protocol":"http","targetPort":81},{"port":90,"protocol":"tcp","targetPort":91}],"probes":null}'
        "con1": "value"
        "both": "con1val"
    spec:
      imagePullSecrets:
        - name: con1-pull-1234567890ab
      hostname: con1
      terminationGracePeriodSeconds: 5
      enableServiceLinks: false
      serviceAccountName: con1
      containers:
        - name: con1
          image: "foo"
          readinessProbe:
            tcpSocket:
              port: 81
          ports:
            - containerPort: 81
              protocol: "TCP"
            - containerPort: 91
              protocol: "TCP"
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: con2
  namespace: app-created-namespace
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/container-name": "con2"
    "acorn.io/managed": "true"
    "con2key": "value"
    "both": "con2val"
  annotations:
    "con2": "value"
    "both": "con2val"
spec:
  selector:
    matchLabels:
      "acorn.io/app-namespace": "app-namespace"
      "acorn.io/app-name": "app-name"
      "acorn.io/container-name": "con2"
      "acorn.io/managed": "true"
  template:
    metadata:
      labels:
        "acorn.io/app-namespace": "app-namespace"
        "acorn.io/app-name": "app-name"
        "acorn.io/container-name": "con2"
        "acorn.io/managed": "true"
        "con2key": "value"
        "both": "con2val"
      annotations:
        acorn.io/container-spec: '{"annotations":{"both":"con2val","con2":"value"},"image":"foo","ports":[{"port":80,"protocol":"http","publish":true,"targetPort":81},{"port":80,"protocol":"tcp","targetPort":81},{"port":90,"protocol":"tcp","targetPort":91}],"probes":null}'
        "con2": "value"
        "both": "con2val"
    spec:
      hostname: con2
      imagePullSecrets:
        - name: con2-pull-1234567890ab
      terminationGracePeriodSeconds: 5
      enableServiceLinks: false
      serviceAccountName: con2
      containers:
        - name: con2
          image: "foo"
          readinessProbe:
            tcpSocket:
              port: 81
          ports:
            - containerPort: 81
              protocol: "TCP"
            - containerPort: 91
              protocol: "TCP"
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: con3
  namespace: app-created-namespace
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/container-name": "con3"
    "acorn.io/managed": "true"
spec:
  selector:
    matchLabels:
      "acorn.io/app-namespace": "app-namespace"
      "acorn.io/app-name": "app-name"
      "acorn.io/container-name": "con3"
      "acorn.io/managed": "true"
  template:
    metadata:
      labels:
        "acorn.io/app-namespace": "app-namespace"
        "acorn.io/app-name": "app-name"
        "acorn.io/container-name": "con3"
        "acorn.io/managed": "true"
      annotations:
        acorn.io/container-spec: '{"image":"foo","ports":[{"port":100,"protocol":"udp","publish":true,"targetPort":101},{"port":100,"protocol":"udp","targetPort":101}],"probes":null}'
    spec:
      hostname: con3
      terminationGracePeriodSeconds: 5
      imagePullSecrets:
        - name: con3-pull-1234567890ab
      enableServiceLinks: false
      serviceAccountName: con3
      containers:
        - name: con3
          image: "foo"
          ports:
            - containerPort: 101
              protocol: "UDP"
