pkg/controller/appdefinition/testdata/service/alias/expected.yaml.d/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: svc1
  namespace: app-created-namespace
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/service-name": "svc1"
    "acorn.io/managed": "true"
    "con1key": "value"
    "con2key": "value"
    "both": "con2val"
  annotations:
    acorn.io/targets: '{"localhost":{"port":81,"service":"svc1"},"svc1-app-name-df05fde6.local.on-acorn.io":{"port":81,"service":"svc1"}}'
    "con1": "value"
    "con2": "value"
    "both": "con2val"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - backend:
              service:
                name: svc1
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: svc1-app-name-df05fde6.local.on-acorn.io
      http:
        paths:
          - backend:
              service:
                name: svc1
                port:
                  number: 80
            path: /
            pathType: Prefix
